--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -223,7 +223,7 @@ table td {
   display: block;
   height: 100%;
   position: absolute;
-  right: -15px;
+  left: -15px;
   top: -13px;
   width: 3px;
   background-color: rgb(var(--color-secondary-200));
@@ -234,7 +234,7 @@ table td {
   display: block;
   height: 3px;
   position: relative;
-  right: -31px;
+  left: -30px;
   top: 57px;
   width: 15px;
   background-color: rgb(var(--color-secondary-200));
@@ -246,7 +246,7 @@ table td {
   display: block;
   height: calc(100% - 80px);
   position: absolute;
-  right: -15px;
+  left: -15px;
   top: 76px;
   width: 4px;
   background-color: rgb(var(--color-secondary-200));
@@ -259,7 +259,7 @@ table td {
   .post-comments .post-comments__answer .answer-item::before {
     width: 3px;
     height: 14px;
-    right: 11px;
+    left: 11px;
     top: -13px;
     position: absolute;
   }
